@@ -268,6 +268,12 @@
 	define('ITEM_AUTHTYPE_PASSWORD',	0);
 	define('ITEM_AUTHTYPE_PUBLICKEY',	1);
 
+	define('ITEM_LOGTYPE_INFORMATION',	1);
+	define('ITEM_LOGTYPE_WARNING',		2);
+	define('ITEM_LOGTYPE_ERROR',		4);
+	define('ITEM_LOGTYPE_FAILURE_AUDIT',	7);
+	define('ITEM_LOGTYPE_SUCCESS_AUDIT',	8);
+
 	define('GRAPH_ITEM_DRAWTYPE_LINE',		0);
 	define('GRAPH_ITEM_DRAWTYPE_FILLED_REGION',	1);
 	define('GRAPH_ITEM_DRAWTYPE_BOLD_LINE',		2);
